--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="service-details.html">Python for Finance (for Begineers)</a> </h5>
+                  <h5 class="mb-15"> <a class="stretched-link" href="#">Python for Finance (for Beginners)</a> </h5>
                   <p class="mb-0">A social assistant that's flexible can accommodate your schedule and needs, making
                     life easier.</p>
                 </div>
@@ -553,7 +553,7 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="service-details.html">Algorithmic Trading with Python</a> </h5>
+                  <h5 class="mb-15"> <a class="stretched-link" href="#">Algorithmic Trading with Python</a> </h5>
                   <p class="mb-0">Modules transform smart trading by automating processes and improving decision-making.
                   </p>
                 </div>
@@ -569,7 +569,7 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="service-details.html">Algorithmic Trading with Amibroker</a> </h5>
+                  <h5 class="mb-15"> <a class="stretched-link" href="#">Algorithmic Trading with Amibroker</a> </h5>
                   <p class="mb-0">There, it's me, your friendly neighborhood reporter's news analyst processes and
                     improving</p>
                 </div>
@@ -601,7 +601,7 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="service-details.html">Algorithmic Trading Setup Development</a> </h5>
+                  <h5 class="mb-15"> <a class="stretched-link" href="services.html">Algorithmic Trading Setup Development</a> </h5>
                   <p class="mb-0">A social assistant that's flexible can accommodate your schedule and needs, making
                     life easier.</p>
                 </div>
@@ -617,7 +617,7 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="service-details.html">Strategy Development & Backtesting</a> </h5>
+                  <h5 class="mb-15"> <a class="stretched-link" href="services.html">Strategy Development & Backtesting</a> </h5>
                   <p class="mb-0">Modules transform smart trading by automating processes and improving decision-making.
                   </p>
                 </div>
@@ -633,7 +633,7 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="service-details.html">1:1 Algorithmic Trading Python Mentorship</a> </h5>
+                  <h5 class="mb-15"> <a class="stretched-link" href="services.html">1:1 Algorithmic Trading Python Mentorship</a> </h5>
                   <p class="mb-0">There, it's me, your friendly neighborhood reporter's news analyst processes and
                     improving</p>
                 </div>
