--- a/services.html
+++ b/services.html
@@ -210,7 +210,7 @@
     <div class="container">
       <div class="service-details__wrapper">
         <div class="row flex-lg-row-reverse g-5">
-          <div class="col-lg-8">
+          <div class="col-lg-12">
             <div class="service-details__item">
               <div class="service-details__item-inner ">
                 <div class="service-details__thumb mb-40" data-aos="fade-up" data-aos-duration="800">
@@ -230,7 +230,7 @@
                 <div class="container">
                   <div class="service__wrapper">
                     <div class="row g-4 align-items-center">
-                      <div class="col-sm-3 col-md-3 col-lg-4">
+                      <div class="col-sm-6 col-md-6 col-lg-4">
                         <div class="service__item" data-aos="fade-up" data-aos-duration="800">
                           <div class="service__item-inner text-center">
                             <div class="service__thumb mb-30">
@@ -239,14 +239,14 @@
                               </div>
                             </div>
                             <div class="service__content">
-                              <h5 class="mb-15"> <a class="stretched-link" href="services.html">Python for Finance (for Beginners)</a> </h5>
+                              <h5 class="mb-15"> <a class="stretched-link" href="atsd.html">Algorithmic Trading Setup Development</a> </h5>
                               <p class="mb-0">A social assistant that's flexible can accommodate your schedule and needs, making
                                 life easier.</p>
                             </div>
                           </div>
                         </div>
                       </div>
-                      <div class="col-sm-3 col-lg-4">
+                      <div class="col-sm-6 col-lg-4">
                         <div class="service__item" data-aos="fade-up" data-aos-duration="1000">
                           <div class="service__item-inner text-center">
                             <div class="service__thumb mb-30">
@@ -255,14 +255,14 @@
                               </div>
                             </div>
                             <div class="service__content">
-                              <h5 class="mb-15"> <a class="stretched-link" href="services.html">Algorithmic Trading with Python</a> </h5>
+                              <h5 class="mb-15"> <a class="stretched-link" href="sdb.html">Strategy Development & Backtesting</a> </h5>
                               <p class="mb-0">Modules transform smart trading by automating processes and improving decision-making.
                               </p>
                             </div>
                           </div>
                         </div>
                       </div>
-                      <div class="col-sm-3 col-lg-4">
+                      <div class="col-sm-6 col-lg-4">
                         <div class="service__item" data-aos="fade-up" data-aos-duration="1200">
                           <div class="service__item-inner text-center">
                             <div class="service__thumb mb-30">
@@ -271,7 +271,7 @@
                               </div>
                             </div>
                             <div class="service__content">
-                              <h5 class="mb-15"> <a class="stretched-link" href="services.html">Algorithmic Trading with Amibroker</a> </h5>
+                              <h5 class="mb-15"> <a class="stretched-link" href="atpm.html">1:1 Algorithmic Trading Python Mentorship</a> </h5>
                               <p class="mb-0">There, it's me, your friendly neighborhood reporter's news analyst processes and
                                 improving</p>
                             </div>
