--- a/index.html
+++ b/index.html
@@ -1349,8 +1349,8 @@
   <!-- ===============>> Team section ends here <<================= -->
 
 
-   <!-- ===============>> About section starts here <<================= -->
-  <section class="about about--style1" id="section-aboutus">
+   <!-- ===============>> Contact Us section starts here <<================= -->
+  <section class="about about--style1" id="section-contactus">
     <div class="container">
       <div class="about__wrapper">
         <div class="section-header section-header--max65">
@@ -1402,7 +1402,7 @@
       </div>
     </div>
   </section>
-  <!-- ===============>> About section ends here <<================= -->
+  <!-- ===============>> Contact Us section ends here <<================= -->
 
 
   <!-- ===============>> FAQ section starts here <<================= -->
