--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
   <meta property="og:title"
     content="AutomateAlgos - Crypto, Forex, and Stocks Trading Business">
   <meta property="og:site_name" content=AutomateAlgos>
-  <meta property="og:url" content="index.html">
+  <meta property="og:url" content="index.php">
   <meta property="og:description"
     content="Welcome to AutomateAlgos, the game-changing course meticulously crafted to revolutionize your trading business. With its sleek and modern design, AutomateAlgos provides a cutting-edge platform to showcase your expertise, attract clients, and stay ahead in the competitive trading markets.">
   <meta property="og:type" content="website">
@@ -121,32 +121,32 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="logo">
-            <a href="index.html">
+            <a href="index.php">
               <img class="dark" src="assets/images/logo/logo.png" alt="logo">
             </a>
           </div>
           <div class="menu-area">
             <ul class="menu menu--style1">
               <li>
-                <a href="index.html#section-home" class="nav-link">Home</a>
+                <a href="index.php#section-home" class="nav-link">Home</a>
               </li>
               <li>
-                <a href="index.html#section-courses" class="nav-link">Courses</a>
+                <a href="index.php#section-courses" class="nav-link">Courses</a>
               </li>
               <li>
-                <a href="index.html#section-services" class="nav-link">Services</a>
+                <a href="index.php#section-services" class="nav-link">Services</a>
               </li>
               <li>
-                <a href="index.html#section-blogs" class="nav-link">Blogs</a>
+                <a href="index.php#section-blogs" class="nav-link">Blogs</a>
               </li>
               <li>
-                <a href="index.html#section-testimonials" class="nav-link">Testimonials</a>
+                <a href="index.php#section-testimonials" class="nav-link">Testimonials</a>
               </li>
               <li>
-                <a href="index.html#section-contactus" class="nav-link">Contact Us</a>
+                <a href="index.php#section-contactus" class="nav-link">Contact Us</a>
               </li>
               <li>
-                <a href="index.html#section-faqs" class="nav-link">FAQs</a>
+                <a href="index.php#section-faqs" class="nav-link">FAQs</a>
               </li>
             </ul>
 
@@ -189,7 +189,7 @@
         <h2>Services</h2>
         <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
           <ol class="breadcrumb mb-0">
-            <li class="breadcrumb-item "><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item "><a href="index.php">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page"><a href="services.html">Services</a></li>
           </ol>
         </nav>
@@ -227,6 +227,8 @@
                     help you succeed. You'll learn everything from technical analysis to risk management, so you can
                     make the best decisions for your investments.</p>
                 </div>
+                <br>
+                <br>
                 <div class="container">
                   <div class="service__wrapper">
                     <div class="row g-4 align-items-center">
@@ -344,12 +346,17 @@
                 </div>
                 <div class="footer__links-content">
                   <ul class="footer__linklist">
-                    <li class="footer__linklist-item"> <a href="about.html">About Us</a>
+                    <li class="footer__linklist-item"> <a href="index.php#section-contactus">About Us</a>
                     </li>
-                    <li class="footer__linklist-item"> <a href="team.html">Teams</a>
+                    <!-- <li class="footer__linklist-item"> <a href="#">Teams</a>
+                    </li> -->
+                    <li class="footer__linklist-item"> <a href="index.php#section-courses">Courses</a>
                     </li>
-                    <li class="footer__linklist-item"> <a href="service.html">Services</a> </li>
-                    <li class="footer__linklist-item"> <a href="#">Features</a>
+                    <li class="footer__linklist-item"> <a href="index.php#section-services">Services</a>
+                    </li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-blogs">Blogs</a>
+                    </li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-testimonials">Testimonials</a>
                     </li>
                   </ul>
                 </div>
@@ -367,8 +374,8 @@
                     </li>
                     <li class="footer__linklist-item"> <a href="#">Privacy Policy</a>
                     </li>
-                    <li class="footer__linklist-item"> <a href="#">FAQs</a></li>
-                    <li class="footer__linklist-item"> <a href="#">Support Center</a> </li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-faqs">FAQs</a></li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-contactus">Support Center</a> </li>
                   </ul>
                 </div>
               </div>
@@ -398,8 +405,8 @@
         <div class="footer__bottom">
           <div class="footer__end">
             <div class="footer__end-copyright">
-              <p class=" mb-0">© 2023 All Rights Reserved By <a href="https://themeforest.net/user/thetork/portfolio"
-                  target="_blank">Thetork</a> </p>
+              <p class=" mb-0">© 2023 All Rights Reserved By <a href="https://smitshetye.github.io/"
+                  target="_blank">Smit Shetye</a> </p>
             </div>
             <div>
               <ul class="social">
