--- a/atsd.html
+++ b/atsd.html
@@ -19,7 +19,7 @@
   <meta property="og:title"
     content="AutomateAlgos - Crypto, Forex, and Stocks Trading Business">
   <meta property="og:site_name" content=AutomateAlgos>
-  <meta property="og:url" content="index.html">
+  <meta property="og:url" content="index.php">
   <meta property="og:description"
     content="Welcome to AutomateAlgos, the game-changing course meticulously crafted to revolutionize your trading business. With its sleek and modern design, AutomateAlgos provides a cutting-edge platform to showcase your expertise, attract clients, and stay ahead in the competitive trading markets.">
   <meta property="og:type" content="website">
@@ -103,6 +103,23 @@
     color: #333;
   }
   
+  /* Style the fork me banner overlay */
+  .pricing__item-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 999;
+  }
+  
+  .pricing__item-overlay img {
+    width: 333px;
+    height: 150px;
+    display: block;
+    /**transform: rotate(-40deg);**/
+  }
+  
+
+
   </style>
 </head>
 
@@ -121,32 +138,32 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="logo">
-            <a href="index.html">
+            <a href="index.php">
               <img class="dark" src="assets/images/logo/logo.png" alt="logo">
             </a>
           </div>
           <div class="menu-area">
             <ul class="menu menu--style1">
               <li>
-                <a href="index.html#section-home" class="nav-link">Home</a>
+                <a href="index.php#section-home" class="nav-link">Home</a>
               </li>
               <li>
-                <a href="index.html#section-courses" class="nav-link">Courses</a>
+                <a href="index.php#section-courses" class="nav-link">Courses</a>
               </li>
               <li>
-                <a href="index.html#section-services" class="nav-link">Services</a>
+                <a href="index.php#section-services" class="nav-link">Services</a>
               </li>
               <li>
-                <a href="index.html#section-blogs" class="nav-link">Blogs</a>
+                <a href="index.php#section-blogs" class="nav-link">Blogs</a>
               </li>
               <li>
-                <a href="index.html#section-testimonials" class="nav-link">Testimonials</a>
+                <a href="index.php#section-testimonials" class="nav-link">Testimonials</a>
               </li>
               <li>
-                <a href="index.html#section-contactus" class="nav-link">Contact Us</a>
+                <a href="index.php#section-contactus" class="nav-link">Contact Us</a>
               </li>
               <li>
-                <a href="index.html#section-faqs" class="nav-link">FAQs</a>
+                <a href="index.php#section-faqs" class="nav-link">FAQs</a>
               </li>
             </ul>
 
@@ -189,7 +206,7 @@
         <h2>Algorithmic Trading Setup Development</h2>
         <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
           <ol class="breadcrumb mb-0">
-            <li class="breadcrumb-item "><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item "><a href="index.php">Home</a></li>
             <li class="breadcrumb-item "><a href="services.html">Services</a></li>
             <li class="breadcrumb-item active" aria-current="page"><a href="atsd.html">Algorithmic Trading Setup Development</a></li>
           </ol>
@@ -240,12 +257,20 @@
           <div class="col-md-6 col-lg-6">
             <div class="pricing__item" data-aos="fade-right" data-aos-duration="1000">
               <div class="pricing__item-inner active">
+                <div class="pricing__item-overlay">
+                  <a href="#"><img src="assets/images/service/30specialoffer.png" alt="30% Off"></a>
+                </div>
+<!--                 
+                <style>
+                .pricing__item-overlay img {
+                  margin-right: 20px;
+                }
+                </style> -->
                 <div class="pricing__item-content">
-
                   <!--pricing top part -->
                   <div class="pricing__item-top">
                     <h6 class="mb-15">Basic</h6>
-                    <h3 class="mb-25">Rs.50,000/- <span>Monthly</span> </h3>
+                    <h3 class="mb-25">Rs.50,000/- <br><span>Monthly</span> </h3>
                   </div>
 
                   <!--pricing middle part -->
@@ -354,14 +379,13 @@
                             <a href="#" class="social__link social__link--style2 active"><i class="fab fa-facebook-f"></i></a>
                           </li>
                           <li class="social__item">
-                            <a href="#" class="social__link social__link--style2 "><i class="fab fa-instagram"></i></a>
+                            <a href="#" class="social__link social__link--style2 active"><i class="fab fa-instagram"></i></a>
                           </li>
                           <li class="social__item">
-                            <a href="#" class="social__link social__link--style2"><i
-                                class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="#" class="social__link social__link--style2 active"><i class="fa-brands fa-linkedin-in"></i></a>
                           </li>
                           <li class="social__item">
-                            <a href="#" class="social__link social__link--style2"><i class="fab fa-youtube"></i></a>
+                            <a href="#" class="social__link social__link--style2 active"><i class="fab fa-youtube"></i></a>
                           </li>
                         </ul>
                       </div>
@@ -431,12 +455,17 @@
                 </div>
                 <div class="footer__links-content">
                   <ul class="footer__linklist">
-                    <li class="footer__linklist-item"> <a href="about.html">About Us</a>
+                    <li class="footer__linklist-item"> <a href="index.php#section-contactus">About Us</a>
                     </li>
-                    <li class="footer__linklist-item"> <a href="team.html">Teams</a>
+                    <!-- <li class="footer__linklist-item"> <a href="#">Teams</a>
+                    </li> -->
+                    <li class="footer__linklist-item"> <a href="index.php#section-courses">Courses</a>
                     </li>
-                    <li class="footer__linklist-item"> <a href="service.html">Services</a> </li>
-                    <li class="footer__linklist-item"> <a href="#">Features</a>
+                    <li class="footer__linklist-item"> <a href="index.php#section-services">Services</a>
+                    </li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-blogs">Blogs</a>
+                    </li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-testimonials">Testimonials</a>
                     </li>
                   </ul>
                 </div>
@@ -454,8 +483,8 @@
                     </li>
                     <li class="footer__linklist-item"> <a href="#">Privacy Policy</a>
                     </li>
-                    <li class="footer__linklist-item"> <a href="#">FAQs</a></li>
-                    <li class="footer__linklist-item"> <a href="#">Support Center</a> </li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-faqs">FAQs</a></li>
+                    <li class="footer__linklist-item"> <a href="index.php#section-contactus">Support Center</a> </li>
                   </ul>
                 </div>
               </div>
@@ -485,8 +514,8 @@
         <div class="footer__bottom">
           <div class="footer__end">
             <div class="footer__end-copyright">
-              <p class=" mb-0">© 2023 All Rights Reserved By <a href="https://themeforest.net/user/thetork/portfolio"
-                  target="_blank">Thetork</a> </p>
+              <p class=" mb-0">© 2023 All Rights Reserved By <a href="https://smitshetye.github.io/"
+                  target="_blank">Smit Shetye</a> </p>
             </div>
             <div>
               <ul class="social">
