--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
   <section class="service padding-top padding-bottom" id="section-courses">
     <div class="section-header section-header--max50">
       <h2 class="mb-15 mt-minus-5"><span>Courses </span>We offer</h2>
-      <p>We offer the best courses around - from Python for Finance, Algorithmic Trading with Python, Algorithmic Trading with Amibroker  and more!</p>
+      <p>We offer the best courses around - from Python for Finance, Algorithmic Trading with Python, Algorithmic Trading with AmiBroker  and more!</p>
     </div>
     <div class="container">
       <div class="service__wrapper">
@@ -609,8 +609,7 @@
                 </div>
                 <div class="service__content">
                   <h5 class="mb-15"> <a class="stretched-link" href="#">Python for Finance (for Beginners)</a> </h5>
-                  <p class="mb-0">A social assistant that's flexible can accommodate your schedule and needs, making
-                    life easier.</p>
+                  <p class="mb-0">Explore the fundamentals of Python programming in the context of finance. This course is perfect for those new to both Python and finance, providing a solid starting point for automating financial tasks and exploring the world of algorithmic trading.                  </p>
                 </div>
               </div>
             </div>
@@ -625,7 +624,7 @@
                 </div>
                 <div class="service__content">
                   <h5 class="mb-15"> <a class="stretched-link" href="#">Algorithmic Trading with Python</a> </h5>
-                  <p class="mb-0">Modules transform smart trading by automating processes and improving decision-making.
+                  <p class="mb-0">Elevate your trading game with our comprehensive Algorithmic Trading with Python course. Dive deep into data analysis, backtesting, and live trading implementation using Python.
                   </p>
                 </div>
               </div>
@@ -640,9 +639,9 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="#">Algorithmic Trading with Amibroker</a> </h5>
-                  <p class="mb-0">There, it's me, your friendly neighborhood reporter's news analyst processes and
-                    improving</p>
+                  <h5 class="mb-15"> <a class="stretched-link" href="#">Algorithmic Trading with AmiBroker</a> </h5>
+                  <p class="mb-0">Unleash the full potential of AmiBroker with our specialized course. Learn how to create, optimize, and automate trading strategies using this powerful software. Ideal for traders looking to leverage AmiBroker's capabilities for algorithmic trading success.
+                  </p>
                 </div>
               </div>
             </div>
@@ -766,9 +765,9 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="services.html">Algorithmic Trading Setup Development</a> </h5>
-                  <p class="mb-0">A social assistant that's flexible can accommodate your schedule and needs, making
-                    life easier.</p>
+                  <h5 class="mb-15"> <a class="stretched-link" href="atsd.html">Algorithmic Trading Setup Development</a> </h5>
+                  <p class="mb-0">We assist in setting up a robust algorithmic trading infrastructure, ensuring you have the right tools and platforms to start trading efficiently.
+                  </p>
                 </div>
               </div>
             </div>
@@ -782,8 +781,8 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="services.html">Strategy Development & Backtesting</a> </h5>
-                  <p class="mb-0">Modules transform smart trading by automating processes and improving decision-making.
+                  <h5 class="mb-15"> <a class="stretched-link" href="sdb.html">Strategy Development & Backtesting</a> </h5>
+                  <p class="mb-0">We help you create and refine winning trading strategies, with thorough historical testing to ensure their effectiveness.
                   </p>
                 </div>
               </div>
@@ -798,12 +797,15 @@
                   </div>
                 </div>
                 <div class="service__content">
-                  <h5 class="mb-15"> <a class="stretched-link" href="services.html">1:1 Algorithmic Trading Python Mentorship</a> </h5>
-                  <p class="mb-0">There, it's me, your friendly neighborhood reporter's news analyst processes and
-                    improving</p>
+                  <h5 class="mb-15"> <a class="stretched-link" href="atpm.html">1:1 Algorithmic Trading Python Mentorship</a> </h5>
+                  <p class="mb-0">Personalized Python mentorship to automate your trading, suitable for both beginners and experienced traders.
+                  </p>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="text-center">
+            <a href="services.html" class="trk-btn trk-btn--border trk-btn--primary mt-40">View more </a>
           </div>
         </div>
       </div>
@@ -1573,8 +1575,15 @@
                     <div id="faqsBody1" class="accordion-collapse collapse show" aria-labelledby="faqs1"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15">Strategy Development, Help in algorithmic trading setup, algorithmic trading courses.</p>
-                      </div>
+                        <p class="mb-15">We provide a range of services including:
+                          <br>
+                          •  Strategy Development: We assist in creating and refining trading strategies tailored to your goals.
+                          <br>
+                          •  Help in Algorithmic Trading Setup: We offer guidance and support in setting up algorithmic trading systems.
+                          <br>
+                          •  Algorithmic Trading Courses: We provide courses to help you learn the ins and outs of algorithmic trading.
+                        </p> 
+                        </div>
                     </div>
                   </div>
                 </div>
@@ -1590,7 +1599,8 @@
                     <div id="faqsBody2" class="accordion-collapse collapse" aria-labelledby="faqs2"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15">We provide 1:1 mentorship and support for our systems to help you treat your trading business.</p>
+                        <p class="mb-15"> Our services may appear costly because we offer personalized 1:1 mentorship and dedicated support to ensure your trading business succeeds. 
+                          This level of attention and expertise comes at a premium.</p>
                       </div>
                     </div>
                   </div>
@@ -1607,7 +1617,7 @@
                     <div id="faqsBody3" class="accordion-collapse collapse" aria-labelledby="faqs3"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15"> You’ll be able to develop you own algo systems without relying much on outside help.</p>
+                        <p class="mb-15"> By taking our course, you'll gain the knowledge and skills needed to develop your own algorithmic trading systems independently, reducing your reliance on external assistance.</p>
                       </div>
                     </div>
                   </div>
@@ -1624,7 +1634,8 @@
                     <div id="faqsBody4" class="accordion-collapse collapse" aria-labelledby="faqs4"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15"> As you know, algo trading market is growing (write some numbers), rather than opting for developers again and again, it’d give exponential returns in the future.                        </p>
+                        <p class="mb-15"> The algorithmic trading market is experiencing significant growth, and by investing in our services, you can position yourself for exponential returns. Instead of repeatedly hiring developers, you'll gain the ability to manage your trading systems effectively.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -1641,7 +1652,7 @@
                     <div id="faqsBody5" class="accordion-collapse collapse" aria-labelledby="faqs5"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15"> Estimated cost of learning and using no-code tool over a period of time will come nearly the same and you won’t get your desired flexibility with these tools which are made for everyone.</p>
+                        <p class="mb-15"> While no-code tools are accessible, the long-term cost of learning and using them can be comparable to our services. Additionally, these tools lack the flexibility required for tailored algorithmic trading strategies.</p>
                       </div>
                     </div>
                   </div>
@@ -1658,7 +1669,17 @@
                     <div id="faqsBody6" class="accordion-collapse collapse" aria-labelledby="faqs6"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15"> Python (Free), VS Code (Free), Cloud Infra Cost (depends on your usecase), Jupyter Notebook (Free).</p>
+                        <p class="mb-15">
+                          In our course, we primarily utilize the following tools:
+                          <br>
+                          •  Python (Free)
+                          <br>
+                          •  Visual Studio Code (Free)
+                          <br>
+                          •  Cloud Infrastructure (Cost varies based on your use)
+                          <br>
+                          •  Jupyter Notebook (Free) 
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -1675,7 +1696,7 @@
                     <div id="faqsBody7" class="accordion-collapse collapse" aria-labelledby="faqs7"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15"> If you’re expecting that everything is served to you in a platter, then please shy away from these services or courses. We can help you build the systems and paths, modifying and creating alpha will be based on your skillsets and efforts.</p>
+                        <p class="mb-15"> If you expect everything to be handed to you without effort, our services may not be suitable for you. Building and modifying trading algorithms will depend on your own skills and dedication.</p>
                       </div>
                     </div>
                   </div>
@@ -1692,7 +1713,8 @@
                     <div id="faqsBody8" class="accordion-collapse collapse" aria-labelledby="faqs8"
                       data-bs-parent="#faqsAccordion1">
                       <div class="accordion__body">
-                        <p class="mb-15"> You can open an account via our trading link, (give link), send us your number, we can give you appropriate discounts as per your trading activity in this account.</p>
+                        <p class="mb-15"> You can qualify for discounts by opening a trading account through our provided link. Afterward, simply share your account details with us, and we'll determine appropriate discounts based on your trading activity. <a href="https://bit.ly/archit_fyers" style="color: blue;">Click here to avail the discount.</a>
+                        </p>
                       </div>
                     </div>
                   </div>
