--- a/sdb.html
+++ b/sdb.html
@@ -219,14 +219,12 @@
                     <img src="assets/images/service/bg.png" alt="service-icon">
                   </div>
                 </div>
-                <div class="service-details__content" data-aos="fade-up" data-aos-duration="900">
-                  <h3 class="mb-15"> <a class="stretched-link" href="service-details.html">Strategy Development & Backtesting</a>
+                <div class="service-details__content" data-aos="fade-up" data-aos-duration="900" style="text-align: center;">
+                  <h3 class="mb-15"> <a class="stretched-link" href="sdb.html" style="color: #0A4FD5;">Strategy Development & Backtesting</a>
                   </h3>
-                  <p class="mb-0">Are you ready to take your trading skills to the next level? Then, you need to check
-                    out these modules for smart trading! With these modules, you'll be able to analyze market trends and
-                    make intelligent trades. Whether you're a beginner or a seasoned pro, these modules are designed to
-                    help you succeed. You'll learn everything from technical analysis to risk management, so you can
-                    make the best decisions for your investments.</p>
+                </div>
+                <div>
+                  <p class="mb-0">Are you ready to take your trading skills to the next level? Then, you need to explore our "Strategy Development & Backtesting" service for smart trading! With this offering, you'll gain the expertise to craft winning trading strategies, analyze market trends, and make intelligent trading decisions. Whether you're a novice or an experienced trader, this service is designed to empower you for success in the world of finance. You'll delve into various aspects, from strategy creation to thorough backtesting, enabling you to make informed choices for your investments. Elevate your trading game with our comprehensive "Strategy Development & Backtesting" service.</p>
                 </div>
                 <br>
   <!-- ===============>> Pricing section starts here <<================= -->
