--- a/atpm.html
+++ b/atpm.html
@@ -219,14 +219,12 @@
                     <img src="assets/images/service/bg.png" alt="service-icon">
                   </div>
                 </div>
-                <div class="service-details__content" data-aos="fade-up" data-aos-duration="900">
-                  <h3 class="mb-15"> <a class="stretched-link" href="service-details.html">1:1 Algorithmic Trading Python Mentorship</a>
+                <div class="service-details__content" data-aos="fade-up" data-aos-duration="900" style="text-align: center;">
+                  <h3 class="mb-15 mt-minus-5"> <a class="stretched-link" href="atpm.html" style="color: #0A4FD5;">1:1 Algorithmic Trading Python Mentorship</a>
                   </h3>
-                  <p class="mb-0">Are you ready to take your trading skills to the next level? Then, you need to check
-                    out these modules for smart trading! With these modules, you'll be able to analyze market trends and
-                    make intelligent trades. Whether you're a beginner or a seasoned pro, these modules are designed to
-                    help you succeed. You'll learn everything from technical analysis to risk management, so you can
-                    make the best decisions for your investments.</p>
+                </div>
+                <div>
+                  <p class="mb-0">Are you ready to take your trading skills to the next level? Then, you need to explore our "1:1 Algorithmic Trading Python Mentorship" service for smart trading! With this offering, you'll gain personalized expertise and guidance to analyze market trends and make intelligent trading decisions using Python. Whether you're a novice or an experienced trader, this mentorship is designed to empower you for success in algorithmic trading. You'll delve into various aspects of Python programming, from the basics to advanced techniques, and learn how to apply them to automate your trading strategies. Elevate your trading game with our comprehensive "1:1 Algorithmic Trading Python Mentorship" service.</p>
                 </div>
                 <br>
   <!-- ===============>> Pricing section starts here <<================= -->
