--- a/services.html
+++ b/services.html
@@ -214,18 +214,19 @@
             <div class="service-details__item">
               <div class="service-details__item-inner ">
                 <div class="service-details__thumb mb-40" data-aos="fade-up" data-aos-duration="800">
-                  <div class="service-details__thumb-inner">
+                  <div class="service-details__thumb-inner" style="text-align: center;">
                     <img src="assets/images/service/bg.png" alt="service-icon">
                   </div>
                 </div>
-                <div class="service-details__content" data-aos="fade-up" data-aos-duration="900">
-                  <h3 class="mb-15"> <a class="stretched-link" href="service-details.html">Services</a>
-                  </h3>
-                  <p class="mb-0">Are you ready to take your trading skills to the next level? Then, you need to check
-                    out these modules for smart trading! With these modules, you'll be able to analyze market trends and
-                    make intelligent trades. Whether you're a beginner or a seasoned pro, these modules are designed to
-                    help you succeed. You'll learn everything from technical analysis to risk management, so you can
-                    make the best decisions for your investments.</p>
+                <div class="section-header section-header--max50 service-details__content" data-aos="fade-up" data-aos-duration="900">
+                  <h2 class="mb-15 mt-minus-5"> <a class="stretched-link" href="services.html"><span>Services</span></a>
+                  </h2>
+                </div>
+                <div>
+                  <p class="mb-0">Are you ready to take your trading skills to the next level? Then, you need to explore our range of services for smart trading! 
+                    With our offerings, you'll gain the expertise to analyze market trends and make intelligent trading decisions. Whether you're a novice or an experienced trader, 
+                    our services are designed to empower you for success. You'll delve into various aspects, from technical analysis to risk management,
+                    enabling you to make informed choices for your investments. Elevate your trading game with our comprehensive services.</p>
                 </div>
                 <br>
                 <br>
@@ -242,8 +243,8 @@
                             </div>
                             <div class="service__content">
                               <h5 class="mb-15"> <a class="stretched-link" href="atsd.html">Algorithmic Trading Setup Development</a> </h5>
-                              <p class="mb-0">A social assistant that's flexible can accommodate your schedule and needs, making
-                                life easier.</p>
+                              <p class="mb-0">We assist in setting up a robust algorithmic trading infrastructure, ensuring you have the right tools and platforms to start trading efficiently.
+                              </p>
                             </div>
                           </div>
                         </div>
@@ -258,7 +259,7 @@
                             </div>
                             <div class="service__content">
                               <h5 class="mb-15"> <a class="stretched-link" href="sdb.html">Strategy Development & Backtesting</a> </h5>
-                              <p class="mb-0">Modules transform smart trading by automating processes and improving decision-making.
+                              <p class="mb-0">We help you create and refine winning trading strategies, with thorough historical testing to ensure their effectiveness.
                               </p>
                             </div>
                           </div>
@@ -274,8 +275,8 @@
                             </div>
                             <div class="service__content">
                               <h5 class="mb-15"> <a class="stretched-link" href="atpm.html">1:1 Algorithmic Trading Python Mentorship</a> </h5>
-                              <p class="mb-0">There, it's me, your friendly neighborhood reporter's news analyst processes and
-                                improving</p>
+                              <p class="mb-0">Personalized Python mentorship to automate your trading, suitable for both beginners and experienced traders.
+                              </p>
                             </div>
                           </div>
                         </div>
